<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_senha"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/botaoEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_entrar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ou" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/botaoGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ou" />

    <Button
        android:id="@+id/botaoConvidado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Botao_convidado" />

    <TextView
        android:id="@+id/text_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/text_cadastro"
        android:textColor="#3F51B5" />

    <Button
        android:id="@+id/botaoCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Botao_cadastro" />

</LinearLayout>