<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CadastroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <EditText
        android:id="@+id/editTextNomeDeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_nome_de_usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEmailDeCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_email_de_cadastro"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextSenhaDeCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_senha_de_cadastro"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/editTextConfirmarSenhaDeCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_confirmar_senha_de_cadastro"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/botaoConfirmarCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Botao_confirma_cadastro" />

    <Button
        android:id="@+id/botaoVoltarParaMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao_voltar_menu" />

</LinearLayout>

</androidx.core.widget.NestedScrollView>