<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".EsqueciASenhaActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/edit_email"

        />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Botao_recuperar_senha"
        />
    <Button
        android:id="@+id/botaoVoltarTelaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Botao_VoltarTelaLogin"
        />


</LinearLayout>